[package]
name = "btleplug_play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.21", features = ["rt", "sync", "macros", "rt-multi-thread"] }

