[package]
name = "probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluest = "0.4.0"
futures-util = "0.3.24"
clap = { version = "3.2", features = ["derive"] }
duration-string = "0.1"
log = "0.4"
env_logger = "0.9"
uuid = "1.1"
tokio = { version = "1.21", features = ["rt", "sync", "macros", "rt-multi-thread"] }

