[package]
name = "probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10"
clap = { version = "4.3", features = ["derive"] }
duration-string = "0.3"
log = "0.4"
env_logger = "0.10"
uuid = "1.1"
tokio = { version = "1.21", features = ["rt", "sync", "macros", "rt-multi-thread"] }
